--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -6,6 +6,6 @@
     {{a.value}}
   </mat-card-content>
   <mat-card-actions>
-    <a routerLink="/welcome" class="btn btn-primary">Chosse another quiz</a>
+    <a routerLink="/welcome" class="btn btn-primary">Choose another quiz</a>
   </mat-card-actions>
 </mat-card>
