--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,11 +1,13 @@
-<mat-card>
-  <mat-card-title class="title">Results</mat-card-title>
-  <br />
-  <br />
-  <mat-card-content class="answer" *ngFor="let a of answers.values" [ngClass]="{correct: a.correct}">
-    {{a.value}}
-  </mat-card-content>
-  <mat-card-actions>
-    <a routerLink="/welcome" class="btn btn-primary">Choose another quiz</a>
-  </mat-card-actions>
-</mat-card>
+<div>
+  <mat-card>
+    <mat-card-title class="title">Results</mat-card-title>
+    <br />
+    <br />
+    <mat-card-content class="answer" *ngFor="let a of answers.values" [ngClass]="{correct: a.correct}">
+      {{a.value}}
+    </mat-card-content>
+    <mat-card-actions>
+      <a routerLink="/welcome" class="btn btn-primary">Choose another quiz</a>
+    </mat-card-actions>
+  </mat-card>
+</div>
