--- a/src/app/question-form/question-form.component.html
+++ b/src/app/question-form/question-form.component.html
@@ -1,11 +1,15 @@
 <div class="quiz" *ngIf="question">
-  <h1>{{question.label}}</h1>
+
+  <h2>{{question.label}}</h2>
   <form [formGroup]="form">
-    <div class="form-group">
+    <mat-card-content class="form-group">
       <label *ngFor="let choice of question.choices">
-        <input type="radio" [value]="choice" formControlName="choice">
-        <span>{{choice.value}}</span>
+        <ul>
+          <li> <input type="radio" [value]="choice" formControlName="choice">
+
+            <span>{{choice.value}}</span></li>
+        </ul>
       </label>
-    </div>
+    </mat-card-content>
   </form>
 </div>
