--- a/src/app/question-form/question-form.component.scss
+++ b/src/app/question-form/question-form.component.scss
@@ -1,5 +1,10 @@
-mat-card {
+mat-card-content {
   width: 50%;
   margin: auto;
   text-align: center;
+  background-color: rgb(238, 208, 212);
+}
+
+ul {
+  list-style-type: none;
 }
