--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -1,16 +1,15 @@
-<mat-card>
-  <div *ngIf="quiz && !questions" class="spinner-grow text-primary"></div>
+<div *ngIf="quiz && !questions" class="spinner-grow text-primary"></div>
 
-  <div class="quiz" *ngIf="questions">
+<mat-card class="quiz" *ngIf="questions">
 
-    <div class="questions" *ngIf="!showResults">
-      <app-question-form [question]="questions[currentQuestionIndex]" (onChoiceMade)="updateChoice($event)">
-      </app-question-form>
-
-      <button class="btn btn-success" (click)="nextOrViewResults()"
+  <div class="questions" *ngIf="!showResults">
+    <app-question-form [question]="questions[currentQuestionIndex]" (onChoiceMade)="updateChoice($event)">
+    </app-question-form>
+    <mat-card-actions>
+      <button class="btn btn-success btn-primary" (click)="nextOrViewResults()"
         [disabled]="!answers.values[currentQuestionIndex]">{{currentQuestionIndex === questions.length -1 ? 'View results' : 'Next'}}</button>
-
-    </div>
-    <app-results *ngIf="showResults" [answers]="answers"></app-results>
+    </mat-card-actions>
   </div>
+  <app-results *ngIf="showResults" [answers]="answers"></app-results>
+
 </mat-card>
