--- a/src/app/questions/questions.component.scss
+++ b/src/app/questions/questions.component.scss
@@ -2,4 +2,9 @@ mat-card {
   width: 50%;
   margin: auto;
   text-align: center;
+  background-color: rgb(238, 208, 212);
+}
+.btn-primary {
+  background-color: lightblue;
+  color: black;
 }
