--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -19,7 +18,11 @@ $my-quiz-app-accent: mat-palette($mat-pink, A200, A100, A400);
 $my-quiz-app-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$my-quiz-app-theme: mat-light-theme($my-quiz-app-primary, $my-quiz-app-accent, $my-quiz-app-warn);
+$my-quiz-app-theme: mat-light-theme(
+  $my-quiz-app-primary,
+  $my-quiz-app-accent,
+  $my-quiz-app-warn
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -28,5 +31,8 @@ $my-quiz-app-theme: mat-light-theme($my-quiz-app-primary, $my-quiz-app-accent, $
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: black;
+  margin-top: 8%;
+}
