--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,13 +1,12 @@
 <div>
-  <mat-card>
-    <mat-card-title class="title">Results</mat-card-title>
-    <br />
-    <br />
-    <mat-card-content class="answer" *ngFor="let a of answers.values" [ngClass]="{correct: a.correct}">
-      {{a.value}}
-    </mat-card-content>
-    <mat-card-actions>
+  <mat-card-title class="title">Results</mat-card-title>
+
+  <mat-card-content class="answer" *ngFor="let a of answers.values" [ngClass]="{correct: a.correct}">
+    {{a.value}}
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button color="primary" class="btn btn-primary">
       <a routerLink="/welcome" class="btn btn-primary">Choose another quiz</a>
-    </mat-card-actions>
-  </mat-card>
+    </button>
+  </mat-card-actions>
 </div>
