--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,13 +1,15 @@
-<mat-card>
-  <mat-card-title>Wecome to the Quiz App!</mat-card-title>
-  <br />
-  <br />
-  <mat-card-content>Select a Quiz</mat-card-content>
-  <mat-card-actions>
-    <a routerLink='/maths' class="quiz-btn">Math Quiz</a>
+<div>
+  <mat-card>
+    <mat-card-title>Wecome to the Quiz App!</mat-card-title>
     <br />
     <br />
+    <mat-card-content>Select a Quiz</mat-card-content>
+    <mat-card-actions>
+      <a routerLink='/maths' class="quiz-btn">Math Quiz</a>
+      <br />
+      <br />
 
-    <a routerLink='/french' class="quiz-btn">French Quiz</a>
-  </mat-card-actions>
-</mat-card>
+      <a routerLink='/french' class="quiz-btn">French Quiz</a>
+    </mat-card-actions>
+  </mat-card>
+</div>
