--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,5 +1,9 @@
 mat-card {
-  width: 75%;
-  margin: auto;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
+  background-color: rgb(238, 208, 212);
+  padding-top: 5%;
+  padding-bottom: 10%;
 }
